test/compile-fail/block-expr-assign-possible.as
let a;

if false {
} else if { a = 20; a > 50; } {
}

let b = a; // error
